# Brook

./: -o  .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  LEGAL.md  README.md  bash_dynamic  bash_dynamic_orig  bash_static  busybox_static  profile.folded  profile.speedscope.json  profile.txt  profile2.txt  profile3.txt  profile4.txt  profile5.txt  profile_clean.txt  shell.nix  syscall_test  thread_test
cmake/toolchains/: kernel-x86_64-clang.cmake  uefi-x86_64-clang.cmake
data/: INIT.RC  asound.conf
data/scripts/: ash.rc  bash.rc  bash_adv.rc  bash_bb1.rc  bash_bb2.rc  bash_bb3.rc  bash_bb4.rc  bash_busybox.rc  bash_coreutils.rc  bash_fork.rc  bash_fork2.rc  bash_interactive.rc  bash_loop.rc  bash_path.rc  bash_pathexec.rc  bash_pipe.rc  bash_write.rc  bash_write2.rc  bbtest.rc  busybox.rc  cowtest.rc  cpuid.rc  crashdump_check.rc  crashdump_fault.rc  crashtest.rc  crashtest_nullptr.rc  curltest.rc  demo.rc  desktop.rc  display_test.rc  doom1.rc  doom32.rc  doom4.rc  doomfs.rc  dyntest.rc  echotest.rc  exectest.rc  fbtest.rc  fontconfig_test.rc  forktest.rc  (+83 more)
data/shortcuts/: calc.rc  doom.rc  ffplay.rc  flower.rc  gimp.rc  ladybird.rc  mousepad.rc  netsurf.rc  netsurf_web.rc  qalc.rc  quake.rc  quake2.rc  terminal.rc  vlc.rc
data/tcc_test/: ansi_test.c  cc  compile.sh  demo.sh  game2048.c  hello.c  snake.c
doomgeneric_brook/: d_main.c  doomgeneric.c  i_video.c  s_sound.c  w_wad.c  w_wad.h
dynlibs/: ld-musl-x86_64.so.1  libhistory.so.8  libncursesw.so.6  libreadline.so.8
scripts/: bake_font.py  bake_logo.py  build.sh  build_all.sh  build_apps.sh  build_doom.sh  build_quake2.sh  clean_all.sh  convert_wallpaper.py  create_data_disk.sh  create_disk.sh  create_ext2_disk.sh  create_nix_disk.sh  debug_client.py  debug_server.py  e2e_wayland_input.sh  fetch_userspace.sh  gdb-kernel.sh  gen_ksym_table.py  gen_symmap.sh  make_disk_image.py  make_fat_image.py  make_initrd.sh  profiler_to_speedscope.py  run-qemu-pair.sh  run-qemu.sh  run-tests.sh  test_panic_qr.py  update_disk.sh  update_ext2_disk.sh  update_nix_disk.sh  vde-up.sh
src/apps/: bbtest.c  coremark_wrapper.c  crash_test.c  crashdump_check.c  demo.c  echotest.c  exectest.c  fibonacci.c  forktest.c  hello.c  mandelbrot.c  memtest.c  pipetest.c  primes.c  remote_thread_test.c  scm_rights_test.c  stresstest.c  symlink_test.c  syscheck.c  sysinfo.c  wayland_test.c  wmtest.c
src/bootloader/: CMakeLists.txt  bootloader.cpp  meson.build  uefi_x64_cross.txt
src/bootloader/src/: acpi.cpp  acpi.h  config.cpp  config.h  console.cpp  console.h  elf_loader.cpp  elf_loader.h  fs.cpp  fs.h  graphics.cpp  graphics.h  main.cpp  memory.cpp  memory.h  paging.cpp  paging.h  runtime.cpp
src/doom/: SDL_endian.h  SDL_mixer.h  doomgeneric_brook.c  i_osssound.c  i_system.c
src/kernel/: CMakeLists.txt  linker.ld
src/kernel/drivers/: CMakeLists.txt
src/kernel/src/: acpi.cpp  acpi.h  ap_trampoline.S  ap_trampoline.h  apic.cpp  apic.h  assert.h  audio.cpp  audio.h  base45.cpp  base45.h  boot_logo.cpp  boot_logo.h  boot_logo_data.h  build_info.h  clock_overlay.cpp  clock_overlay.h  compositor.cpp  compositor.h  context_switch.S  cpu.cpp  cpu.h  debug_overlay.cpp  debug_overlay.h  device.cpp  device.h  display.cpp  display.h  elf.h  elf_loader.cpp  exception_info.cpp  exception_info.h  exception_stubs.S  ext2_vfs.cpp  ext2_vfs.h  fat_test_image.h  fatfs_glue.cpp  fatfs_glue.h  fatfs_vfs.cpp  fatfs_vfs.h  (+95 more)
src/kernel/src/memory/: DOCS.md  address.h  heap.cpp  heap.h  physical_memory.cpp  physical_memory.h  virtual_memory.cpp  virtual_memory.h
src/kernel/src/sync/: DOCS.md  kmutex.cpp  kmutex.h  krwlock.cpp  krwlock.h  ksemaphore.cpp  ksemaphore.h
src/modules/: sched_mlfq.cpp  sched_rr.cpp
src/scripts/: build.py  build.sh
src/shared/: stdint.h
src/tests/: CMakeLists.txt
src/tests/common/: test_framework.h
src/tests/host/: CMakeLists.txt
src/tests/test_device_registry/: main.cpp
src/tests/test_ext2/: main.cpp
src/tests/test_heap/: main.cpp
src/tests/test_kmutex/: main.cpp
src/tests/test_krwlock/: main.cpp
src/tests/test_ksemaphore/: main.cpp
src/tests/test_memory_map/: main.cpp
src/tests/test_pmm/: main.cpp
src/tests/test_sched_modules/: main.cpp
src/tests/test_sched_policy/: main.cpp
src/tests/test_string/: main.cpp
src/tests/test_tcp/: main.cpp
src/tests/test_vfs/: main.cpp
src/tests/test_vmm/: main.cpp
src/user/: cowsay.c  hello.c
src/userspace/: cow_test.c  dyntest.c  syscall_test.c  tcp_listen_test.c  thread_test.c
tcc_sysroot/: tcc
tcc_sysroot/include/: asm  asm-generic  config  cxl  drm  fwctl  linux  misc  mtd  rdma  regulator  sound  video  xen
tools/: crash_decoder.py  crash_test.sh  wayland_test
tools/brook-cursor-theme/: default.nix
tools/brook-fonts-pkg/: default.nix
tools/brook-player-pkg/: brook-player.c  default.nix
tools/brook-weston-data-pkg/: default.nix
tools/mp3play/: mp3play.c
tools/nar-unpack/: nar-unpack  nar-unpack.c
tools/netsurf-pkg/: default.nix
tools/netsurf-surface/: Makefile.libnsfb-surface  brook.c
tools/nix-fetch/: nix-fetch  nix-fetch.c  nix-fetch.sh
tools/nix-index/: gen-nix-index.py  packages.idx
tools/nix-install/: nix-install  nix-install.c
tools/nix-search/: nix-search.c
tools/profile/: profile  profile.c
tools/quake2/: meson.build
tools/quake2/source/: cd_brook.c  cd_null.c  cl_scrn.c  cl_view.c  files.c  g_main.c  in_brook.c  keys.c  menu.c  net_brook.c  q_shbrook.c  q_shlinux.c  qcommon.h  r_main.c  r_poly.c  r_rast.c  ref.h  server.h  snd_brook.c  stb_vorbis_impl.c  swimp_brook.c  sys_brook.c  vid_brook.c
tools/quakegeneric/: meson.build
tools/sinetest/: sinetest  sinetest.c
tools/wavplay/: tone.c  wavplay.c
tools/wayland-calc-pkg/: default.nix  result  wayland-calc.c
tools/wayland-shm-smoke-pkg/: default.nix  wayland-shm-smoke.c
tools/wayland-smoke-pkg/: default.nix  wayland-smoke.c
tools/wayland-xdg-smoke-pkg/: default.nix  wayland-xdg-smoke.c
tools/waylandd-pkg/: default.nix  result  waylandd.c
tools/weston-clickdot-pkg/: default.nix
tools/weston-demo-pkg/: default.nix
(+56 files in other folders)
